--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,57 @@
 acdh-django-browsing==0.0.1
-aiofiles==0.4.0
-asgiref==3.2.3
+acdh-django-charts==0.5.3
+acdh-django-netvis==1.0.0
+aiofiles==0.6.0
+asgiref==3.2.10
 blis==0.4.1
-cachetools==4.0.0
-catalogue==0.0.8
-certifi==2019.11.28
+cachetools==4.1.1
+catalogue==1.0.0
+certifi==2020.6.20
 chardet==3.0.4
-Click==7.0
+click==7.1.2
 cymem==2.0.3
-Django==3.0.1
-django-autocomplete-light==3.5.0
-django-crispy-forms==1.8.1
-django-extensions==2.2.5
-django-filter==2.2.0
-django-super-deduper==0.1.2
-django-tables2==2.2.1
-djangorestframework==3.11.0
+Django==3.1.1
+django-autocomplete-light==3.5.1
+django-crispy-forms==1.9.2
+django-extensions==3.0.9
+django-filter==2.3.0
+django-leaflet==0.27.1
+django-reversion==3.0.8
+django-super-deduper==0.1.4
+django-tables2==2.3.1
+djangorestframework==3.11.1
 fastapi==0.44.1
 h11==0.9.0
-httptools==0.0.13
-idna==2.8
-importlib-metadata==1.3.0
-more-itertools==8.0.2
+httptools==0.1.1
+idna==2.10
+isodate==0.6.0
+lxml==4.5.2
 murmurhash==1.0.2
-numpy==1.18.0
-pandas==0.25.3
-peewee==3.13.1
+numpy==1.19.2
+pandas==1.1.2
+peewee==3.13.3
 plac==1.1.3
 preshed==3.0.2
-pydantic==1.3
+psutil==5.7.3
+psycopg2-binary==2.8.6
+pydantic==1.7
 PyJWT==1.7.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
-pytz==2019.3
-requests==2.22.0
-six==1.13.0
-spacy==2.2.3
-sqlparse==0.3.0
-srsly==0.2.0
+pytz==2020.1
+rdflib==5.0.0
+requests==2.24.0
+six==1.15.0
+spacy==2.3.2
+sqlparse==0.3.1
+srsly==1.0.2
 starlette==0.12.9
-thinc==7.3.1
-toolz==0.10.0
-tqdm==4.41.0
-urllib3==1.25.7
-uvicorn==0.11.1
+thinc==7.4.1
+toolz==0.11.1
+tqdm==4.51.0
+urllib3==1.25.10
+uvicorn==0.11.8
 uvloop==0.14.0
-wasabi==0.4.2
+wasabi==0.8.0
 websockets==8.1
-zipp==0.6.0
-rdflib
-psutil
+xlrd==1.2.0
