--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-leaflet==0.27.1
 django-reversion==3.0.8
 django-super-deduper==0.1.4
 django-tables2==2.3.1
+django-url-filter==0.3.15
 djangorestframework==3.11.1
 fastapi==0.44.1
 h11==0.9.0
