--- a/config/default.conf
+++ b/config/default.conf
@@ -2,14 +2,14 @@ server {
     listen 81;
     server_name localhost;
 
-    location /static/ {        
-        autoindex on;          
-        alias /staticfiles/;   
+    location /static/ {
+        autoindex on;
+        alias /app/staticfiles/;
     }
-  
-    location / {               
-        proxy_pass http://nerdpool_prodigy:8000;
-        proxy_set_header Host $host;    
+
+    location / {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
