--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,4 +50,4 @@ jobs:
      runs-on: ubuntu-latest
      steps:
      - name: Rancher Deploy Action
-       run: "docker run --rm curlimages/curl:7.74.0  --request POST 'https://rancher.acdh-dev.oeaw.ac.at/v3/project/c-zdbh8:p-8xg6d/workloads/deployment:hapa:nerdpool?action=redeploy' --header 'Accept: application/json' --header 'Authorization: Bearer ${{ secrets.RANCHER_BARER_TOKEN }}'"
+       run: "docker run --rm curlimages/curl:7.74.0  --request POST 'https://rancher.acdh-dev.oeaw.ac.at/v3/project/c-m-6hwgqq2g:p-q82rb/workloads/deployment:hapa:nerdpool?action=redeploy' --header 'Accept: application/json' --header 'Authorization: Bearer ${{ secrets.RANCHER_BARER_TOKEN }}'"
